stylesheet.less
/* ... */
.widget.profile fieldset label, .widget.signupform fieldset label, .blog-search-form label {
    width: 100%;
    float: left;
    font-family: @font-swatch5-font-family;
    color: lighten(@color-swatch5,10%);
    line-height:@font-swatch5-line-height;
    letter-spacing: @font-swatch4-letter-spacing;
}

.widget.profile form fieldset input, .widget.signupform fieldset input, .blogsearch form input {
    height: 42px;
    width: 73%;
    font-family: @font-swatch5-font-family;
    font-size: @font-swatch5-font-size;
    color: @font-swatch5-color;
    text-indent: 8px;
    margin-top: 6px;
    margin-bottom: 30px;
    padding: 0;
    float:left;
    border-radius: 0;
}

.widget.profile fieldset button.btn, .widget.signupform fieldset button.btn, .blogsearch form button  {
    width: 25%;
    height: 42px;
    padding: 1px;
    margin-top: 6px;
    border: 1px solid darken(@color-swatch3,5%);
    font-family: @font-swatch7-font-family;
    font-size: 16px;
    font-weight:@font-swatch7-font-weight;
    background-color: @font-swatch7-background-color;
    color: @font-swatch7-color;
    text-decoration: none;
    letter-spacing: 1px;
    text-shadow: none;
}

.widget.profile fieldset button.btn:hover, .widget.signupform fieldset button.btn:hover {
    background-color: @font-swatch7-background-color-hover;
    cursor: pointer;
}


.widget.signupform fieldset input:focus, .widget.signupform fieldset textarea:focus {
  outline: none;
}



/* ===============================
   HEADER
   =============================== */

.bk-header {
  padding: 0;
  background-color: @color-swatch7;
}

.companyheader {
  display: block;
  float: left;
  padding: 11px 0px 7px
}

.companyname a {
  text-decoration: none;
  font-family:@font-swatch10-font-family;
  font-weight: @font-swatch10-font-weight;
  color:@font-swatch10-color;
  line-height:@font-swatch10-line-height;
  letter-spacing: @font-swatch10-letter-spacing;
  font-size: @font-swatch10-font-size;
}

.companyname a:hover {
  text-decoration: none;
}

/* COMPANY NAME */

.widget.companyname {
  display: block;
  float: left;
  margin-top: 5px;
}

.widget.companyname h1 {
  margin: 0;
  padding: 0;
  letter-spacing: -1px;
}

/* LOGO */

.widget.logo {
  display: block;
  float: left;
  margin-right: 10px;
}

/* ===============================
   FOOTER
   =============================== */

.bk-footer {
  padding: 4em 0;
  background-color: @color-swatch7;
  min-height: 150px;
  color: @color-swatch1;
}

.bk-footer h2 {
  color: @color-swatch3;
  font-size:bkscale(@font-swatch2-font-size, 0.9);
  padding-bottom: 20px;
}

.bk-footer p {
  font-family: @font-swatch5-font-family;
  color: lighten(@color-swatch5,10%);
  line-height:@font-swatch5-line-height;
  padding-bottom: 20px;
}

.bk-footer span {
  color: @color-swatch1;
}



/* ===============================
   EXTENDED NAVIGATION
   =============================== */

.widget.extendednavigation {
  float: right;
  position: relative;
  max-width: 691px;
}

.widget.extendednavigation a.pull {
  display: none;
}

.widget.extendednavigation ul {
  float: left;
  margin: 0;
  padding: 0;
}

/* ALIGNMENTS */

.widget.extendednavigation ul.align-center li, .widget.extendednavigation ul.align-center li:hover ul li {
  text-align: center;
}

.widget.extendednavigation ul.align-left li, .widget.extendednavigation ul.align-left li:hover ul li
{
  text-align: left;
}
.widget.extendednavigation ul.align-right li, .widget.extendednavigation ul.align-right li:hover ul li
{
  background-color: @color-swatch3;
  text-align: right;
}

.widget.extendednavigation ul li {
  float: left;
  display: block;
  text-align: left!important;
}

.widget.extendednavigation ul li a, .widget.extendednavigation ul li.folder .text {
  display: block;
  padding: 18px 25px;
  font-family:@font-swatch6-font-family;
  font-size:@font-swatch6-font-size;
  font-weight: @font-swatch6-font-weight;
  color: @font-swatch6-color;
  line-height:@font-swatch6-line-height;
  letter-spacing: @font-swatch6-letter-spacing;
}

.widget.extendednavigation ul li a:hover {
  text-decoration: none;
  color: @font-swatch6-color-hover;
}

/* SELECTED */

.widget.extendednavigation ul li.selected {
  background-color: @color-swatch3;
}

/* FOLDER */

.widget.extendednavigation ul li.folder {
  margin-right: 16px;
  background-image: image('/images/arrow-down.png');
  background-position: right center;
  background-repeat: no-repeat;
  cursor: pointer;
}

.widget.extendednavigation ul li.folder .text:hover {
  color: @font-swatch6-color-hover;
}

/* DROPDOWN MENU */

.widget.extendednavigation li > ul {
  display: none;
}

.widget.extendednavigation li:hover > ul {
  display: block;
  width: 100%;
  position: absolute;
  left: 0;
  background-color: @color-swatch7;
  border-top: 1px solid lighten(@color-swatch7,8%);
  z-index: 500;
  padding: 20px 0;
}

.widget.extendednavigation li:hover > ul > li {
  display: block;
  width: 100%;
  text-align: left!important;
  padding: 0 30px 0;
  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
  -moz-box-sizing: border-box;    /* Firefox, other Gecko */
  box-sizing: border-box;         /* Opera/IE 8+ */
}

.widget.extendednavigation li:hover > ul > li:hover {
  background-color: @color-swatch3;
}


.widget.extendednavigation li:hover > ul > li > a {
  display: block;
  background-image: none;
  padding: 0;
}

.widget .extendednavigation ul li:hover ul {
  background-color: @color-swatch7;
}

.widget.extendednavigation ul li:hover > ul li .text {
  padding: 0 0 0 16px;
  background-image: image('/images/arrow-left.png');
  background-position: left center;
  background-repeat: no-repeat;
}


.widget.extendednavigation li:hover > ul li .text:hover {
  color: @color-swatch1;
}

.widget .extendednavigation ul li.folder:after {
    display: none;
}

/* ===============================
   FEATURE
   =============================== */

 .widget.feature {
  width: 100%;
  padding: 0;
}
/* ... */

